--- a/kubernetes/omni/apps/monitoring/kube-prometheus-stack/app/helmrelease.yaml
+++ b/kubernetes/omni/apps/monitoring/kube-prometheus-stack/app/helmrelease.yaml
@@ -119,14 +119,7 @@ spec:
     ###
     prometheus:
       ingress:
-        enabled: true
-        ingressClassName: internal-nginx
-        pathType: Prefix
-        hosts:
-          - &host_prometheus prometheus-${CLUSTER_NAME}.greyrock.casa
-        tls:
-          - hosts:
-              - *host_prometheus
+        enabled: false
 
       prometheusSpec:
         additionalAlertManagerConfigs:
