--- a/.archive/kubernetes/jellyfin/app/helmrelease.yaml
+++ b/.archive/kubernetes/jellyfin/app/helmrelease.yaml
@@ -34,8 +34,8 @@ spec:
 
         pod:
           enableServiceLinks: false
-          nodeSelector:
-            intel.feature.node.kubernetes.io/gpu: "true"
+          # nodeSelector:
+          #   intel.feature.node.kubernetes.io/gpu: "true"
           securityContext:
             runAsUser: 2000
             runAsGroup: 2000
@@ -58,10 +58,10 @@ spec:
             resources:
               requests:
                 cpu: 100m
-                gpu.intel.com/i915: 1
+                # gpu.intel.com/i915: 1
                 memory: 9248M
               limits:
-                gpu.intel.com/i915: 1
+                # gpu.intel.com/i915: 1
                 memory: 9248M
 
     service:
