--- a/kubernetes/omni/apps/network/omni/app/helmrelease.yaml
+++ b/kubernetes/omni/apps/network/omni/app/helmrelease.yaml
@@ -69,7 +69,7 @@ spec:
                 cpu: 5m
                 memory: 256M
               limits:
-                memory: 256M
+                memory: 2G
             securityContext:
               privileged: true
 
