--- a/kubernetes/utility/apps/cert-manager/cert-manager/issuers/kustomization.yaml
+++ b/kubernetes/utility/apps/cert-manager/cert-manager/issuers/kustomization.yaml
@@ -6,3 +6,4 @@ resources:
   - ./externalsecret.yaml
   - ./issuer-letsencrypt-prd.yaml
   - ./issuer-letsencrypt-staging.yaml
+  - ./issuer-zerossl-prd.yaml
