--- a/kubernetes/utility/apps/network/ingress-nginx/shared/certificate.yaml
+++ b/kubernetes/utility/apps/network/ingress-nginx/shared/certificate.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   secretName: "greyrock-casa-tls"
   issuerRef:
-    name: letsencrypt-production
+    name: zerossl-production
     kind: ClusterIssuer
   commonName: "greyrock.casa"
   dnsNames:
