feat: Enable i915 again

--- a/.archive/kubernetes/frigate/app/helmrelease.yaml
+++ b/.archive/kubernetes/frigate/app/helmrelease.yaml
@@ -117,7 +117,7 @@ spec:
       privileged: true
 
     nodeSelector:
-      # intel.feature.node.kubernetes.io/gpu: "true"
+      intel.feature.node.kubernetes.io/gpu: "true"
 
     affinity:
       podAntiAffinity:
@@ -134,11 +134,11 @@ spec:
 
     resources:
       requests:
-        # gpu.intel.com/i915: 1
+        gpu.intel.com/i915: 1
         cpu: 189m
         memory: 1219M
       limits:
-        # gpu.intel.com/i915: 1
+        gpu.intel.com/i915: 1
         memory: 1219M
 
     volumeClaimTemplates:
