Revert "feat: Enable i915 again"
This reverts commit 982890be2483c4c8d0c69ab0a246c39487d88f54.

--- a/kubernetes/main/apps/media/plex/app/helmrelease.yaml
+++ b/kubernetes/main/apps/media/plex/app/helmrelease.yaml
@@ -60,10 +60,10 @@ spec:
             resources:
               requests:
                 cpu: 100m
-                gpu.intel.com/i915: 1
+                # gpu.intel.com/i915: 1
                 memory: 9248M
               limits:
-                gpu.intel.com/i915: 1
+                # gpu.intel.com/i915: 1
                 memory: 16384M
 
     service:
