--- a/.archive/kubernetes/jellyfin/app/helmrelease.yaml
+++ b/.archive/kubernetes/jellyfin/app/helmrelease.yaml
@@ -58,10 +58,10 @@ spec:
             resources:
               requests:
                 cpu: 100m
-                gpu.intel.com/i915: 1
+                # gpu.intel.com/i915: 1
                 memory: 9248M
               limits:
-                gpu.intel.com/i915: 1
+                # gpu.intel.com/i915: 1
                 memory: 9248M
 
     service:
