feat(talos): Omni configs for talos clusters

--- a/.omni/clusters/main/cp-patches.yaml
+++ b/.omni/clusters/main/cp-patches.yaml
@@ -8,7 +8,12 @@ cluster:
         configuration:
           exemptions:
             namespaces:
+              - dev
+              - downloads
+              - home-automation
+              - media
               - monitoring
+              - network
               - openebs
               - rook-ceph
               - security
