--- a/kubernetes/main/apps/home-automation/rtlamr2mqtt/app/externalsecret.yaml
+++ b/kubernetes/main/apps/home-automation/rtlamr2mqtt/app/externalsecret.yaml
@@ -1,5 +1,5 @@
 ---
-# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/external-secrets.io/externalsecret_v1beta1.json
+# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/external-secrets.io/externalsecret_v1beta1.json
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
@@ -10,12 +10,51 @@ spec:
     name: onepassword-connect
   target:
     name: rtlamr2mqtt-secret
-    creationPolicy: Owner
     template:
       engineVersion: v2
       data:
-        RT_LAMR_CONFIG_FILE: "{{ .rtlamr2mqtt_config_file }}"
+        rtlamr2mqtt.yaml: |
+          general:
+            sleep_for: 0
+            verbosity: debug
+            tickle_rtl_tcp: false
+            device_id: 0bda:2838
+          mqtt:
+            host: mosquitto.home-automation.svc.cluster.local
+            port: 1883
+            tls_enabled: false
+            user: "{{ .mosquitto_rtlamr2mqtt_username }}"
+            password: "{{ .mosquitto_rtlamr2mqtt_password }}"
+            ha_autodiscovery: true
+            ha_autodiscovery_topic: homeassistant
+            base_topic: rtlamr
+          custom_parameters:
+            rtltcp: -s 2048000
+            rtlamr: -unique=true -symbollength=32
+          meters:
+            - id: "{{ .rtlamr2mqtt_meter_id_grid }}"
+              protocol: scm+
+              name: meter_grid_net
+              format: "######"
+              unit_of_measurement: kWh
+              icon: mdi:gauge
+              device_class: energy
+              state_class: total
+            - id: "{{ .rtlamr2mqtt_meter_id_solar }}"
+              protocol: scm+
+              name: home_energy_meter
+              format: "######"
+              unit_of_measurement: kWh
+              icon: mdi:gauge
+              device_class: energy
+              state_class: total
   dataFrom:
+    - extract:
+        key: mosquitto
+      rewrite:
+        - regexp:
+            source: "(.*)"
+            target: "mosquitto_$1"
     - extract:
         key: rtlamr2mqtt
       rewrite:
