--- a/kubernetes/main/apps/home-automation/rtlamr2mqtt/app/helmrelease.yaml
+++ b/kubernetes/main/apps/home-automation/rtlamr2mqtt/app/helmrelease.yaml
@@ -21,6 +21,11 @@ spec:
       rtlamr2mqtt:
         annotations:
           reloader.stakater.com/auto: "true"
+
+        pod:
+          labels:
+            egress.home.arpa/kubedns: allow # FIXME: Remove when clusterNetworkPolicy is in place
+
         containers:
           app:
             image:
