--- a/kubernetes/main/apps/selfhosted/hajimari-todd/app/helmrelease.yaml
+++ b/kubernetes/main/apps/selfhosted/hajimari-todd/app/helmrelease.yaml
@@ -61,6 +61,9 @@ spec:
             - name: PiKVM
               url: https://pikvm.greyrock.io
               icon: video-switch
+            - name: Omni
+              url: https://omni.greyrock.io
+              icon: https://avatars.githubusercontent.com/u/13804887?s=200&v=4
 
       globalBookmarks:
         - group: FFXIV
