--- a/.github/workflows/omni-cluster-sync.yaml
+++ b/.github/workflows/omni-cluster-sync.yaml
@@ -56,5 +56,5 @@ jobs:
         shell: bash
         run: |
           for f in ${{ steps.changed-files.outputs.all_changed_and_modified_files }}; do
-            omnictl cluster template status -f "${f}"
+            omnictl cluster template sync -f "${f}" --verbose
           done
