--- a/.github/workflows/flux-ks-sync.yaml
+++ b/.github/workflows/flux-ks-sync.yaml
@@ -13,6 +13,7 @@ on:
       - kubernetes/nas/**
       - kubernetes/utility/**
       - kubernetes/omni/**
+      - '!kubernetes/**/omni-template.yaml'
 
 concurrency:
   group: ${{ github.ref }}-${{ github.workflow }}
