--- a/kubernetes/main/apps/monitoring/thanos/app/helmrelease.yaml
+++ b/kubernetes/main/apps/monitoring/thanos/app/helmrelease.yaml
@@ -75,6 +75,7 @@ spec:
         - thanos-svc-nas.greyrock.casa:10901
         - thanos-svc-omni.greyrock.casa:10901
         - thanos-svc-utility.greyrock.casa:10901
+        - thanos-svc-omni.greyrock.casa:10901
       extraArgs:
         - --alert.query-url=http://thanos.greyrock.casa
     queryFrontend:
