feat(omni): Add external-dns

--- a/kubernetes/omni/apps/network/kustomization.yaml
+++ b/kubernetes/omni/apps/network/kustomization.yaml
@@ -7,5 +7,6 @@ resources:
   - ./namespace.yaml
   # Flux-Kustomizations
   - ./dnsmasq/ks.yaml
+  - ./external-dns/ks.yaml
   - ./matchbox/ks.yaml
   - ./omni/ks.yaml
