fix(external-dns): omni label

--- a/kubernetes/omni/apps/network/external-dns/internal/helmrelease.yaml
+++ b/kubernetes/omni/apps/network/external-dns/internal/helmrelease.yaml
@@ -61,7 +61,7 @@ spec:
       - ingress
       - service
 
-    txtPrefix: "k8s-nas."
+    txtPrefix: "k8s-omni."
 
   postRenderers:
     - kustomize:
