--- a/kubernetes/main/apps/monitoring/blackbox-exporter/app/helmrelease.yaml
+++ b/kubernetes/main/apps/monitoring/blackbox-exporter/app/helmrelease.yaml
@@ -26,7 +26,8 @@ spec:
         [{
           "name":"multus-iot",
           "namespace": "network",
-          "ips": ["10.1.4.156/23"]
+          "ips": ["10.1.4.156/23"],
+          "mac": "64:64:63:90:8d:da"
         }]
 
     podSecurityContext:
