--- a/kubernetes/main/apps/home-automation/ambientweather2mqtt/app/helmrelease.yaml
+++ b/kubernetes/main/apps/home-automation/ambientweather2mqtt/app/helmrelease.yaml
@@ -31,7 +31,8 @@ spec:
               [{
                 "name":"multus-iot",
                 "namespace": "network",
-                "ips": ["10.1.4.157/23"]
+                "ips": ["10.1.4.157/23"],
+                "mac": "64:64:63:90:8d:d5"
               }]
 
         containers:
