--- a/kubernetes/main/apps/monitoring/loki/app/helmrelease.yaml
+++ b/kubernetes/main/apps/monitoring/loki/app/helmrelease.yaml
@@ -96,7 +96,7 @@ spec:
       image:
         registry: ghcr.io
         repository: nginxinc/nginx-unprivileged
-        tag: 1.25-alpine@sha256:7c5f491429641ddacc2292ce8fc4059533676cc798e659b428c75c6512f2f43b
+        tag: 1.25.4-alpine
       deploymentStrategy:
         type: RollingUpdate
         rollingUpdate:
