--- a/kubernetes/main/apps/kube-system/cilium/app/values.yaml
+++ b/kubernetes/main/apps/kube-system/cilium/app/values.yaml
@@ -1,68 +1,27 @@
 ---
-cluster:
-  name: main
-  id: 1
-
-cni:
-  exclusive: false
-
-bgp:
-  enabled: false
-  announce:
-    loadbalancerIP: true
-    podCIDR: false
-
-bgpControlPlane:
-  enabled: true
-
-k8sServiceHost: localhost
-k8sServicePort: 7445
-
-rollOutCiliumPods: true
-localRedirectPolicy: true
-
-kubeProxyReplacement: strict
-kubeProxyReplacementHealthzBindAddr: 0.0.0.0:10256
-
-loadBalancer:
-  algorithm: maglev
-  mode: dsr
-
+autoDirectNodeRoutes: true
 bandwidthManager:
-  enabled: true
   bbr: true
+  enabled: true
 bpf:
   masquerade: true
   tproxy: true
-
-l7Proxy: true
-
-enableCnpStatusUpdates: true
-endpointStatus:
-  enabled: true
-  status: "policy"
-
-ipam:
-  mode: "kubernetes"
-
-ingressController:
-  enabled: false
-  loadbalancerMode: shared
-
-operator:
-  rollOutPods: true
-
-autoDirectNodeRoutes: true
-ipv4NativeRoutingCIDR: 10.244.0.0/16
-routingMode: native
+cgroup:
+  autoMount:
+    enabled: false
+  hostRoot: /sys/fs/cgroup
+cluster:
+  id: 1
+  name: main
+cni:
+  exclusive: false
 containerRuntime:
   integration: containerd
-
+enableRuntimeDeviceDetection: true
+endpointRoutes:
+  enabled: true
 hubble:
   enabled: true
-  serviceMonitor:
-    enabled: false
-
   metrics:
     enabled:
       - dns:query;ignoreAAAA
@@ -72,17 +31,33 @@ hubble:
       - port-distribution
       - icmp
       - http
-
   relay:
     enabled: true
     rollOutPods: true
-
+  serviceMonitor:
+    enabled: false
   ui:
     enabled: true
     ingress:
       enabled: false
     rollOutPods: true
-
+ipam:
+  mode: "kubernetes"
+ipv4NativeRoutingCIDR: 10.244.0.0/16
+k8sServiceHost: 127.0.0.1
+k8sServicePort: 7445
+kubeProxyReplacement: true
+kubeProxyReplacementHealthzBindAddr: 0.0.0.0:10256
+l2announcements:
+  enabled: true
+loadBalancer:
+  algorithm: maglev
+  mode: dsr
+localRedirectPolicy: true
+operator:
+  rollOutPods: true
+rollOutCiliumPods: true
+routingMode: native
 securityContext:
   capabilities:
     ciliumAgent:
@@ -101,8 +76,3 @@ securityContext:
       - NET_ADMIN
       - SYS_ADMIN
       - SYS_RESOURCE
-
-cgroup:
-  autoMount:
-    enabled: false
-  hostRoot: /sys/fs/cgroup
