--- a/kubernetes/main/apps/kube-system/cilium/config/kustomization.yaml
+++ b/kubernetes/main/apps/kube-system/cilium/config/kustomization.yaml
@@ -3,11 +3,5 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - ./helmrelease.yaml
-configMapGenerator:
-  - name: cilium-values
-    files:
-      - values.yaml=./values.yaml
-
-configurations:
-  - kustomizeconfig.yaml
+  - ./l2announcement.yaml
+  - ./netpols
