--- a/kubernetes/main/apps/kube-system/cilium/ks.yaml
+++ b/kubernetes/main/apps/kube-system/cilium/ks.yaml
@@ -22,16 +22,16 @@ spec:
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: cilium-netpols
+  name: cilium-config
   namespace: flux-system
 spec:
   targetNamespace: kube-system
   commonMetadata:
     labels:
       app.kubernetes.io/name: cilium
-      app.kubernetes.io/component: netpols
+      app.kubernetes.io/component: config
   interval: 10m
-  path: "./kubernetes/main/apps/kube-system/cilium/netpols"
+  path: "./kubernetes/main/apps/kube-system/cilium/config"
   prune: true
   sourceRef:
     kind: GitRepository
