--- a/kubernetes/main/apps/home-automation/mosquitto/app/helmrelease.yaml
+++ b/kubernetes/main/apps/home-automation/mosquitto/app/helmrelease.yaml
@@ -74,7 +74,7 @@ spec:
         type: LoadBalancer
         annotations:
           external-dns.alpha.kubernetes.io/hostname: "mqtt.greyrock.casa."
-          io.cilium/lb-ipam-ips: "10.45.0.10"
+          io.cilium/lb-ipam-ips: 10.1.1.135
         externalTrafficPolicy: Local
         ports:
           mqtt:
