feat(talos): Config updates

--- a/kubernetes/main/bootstrap/talos/talconfig.yaml
+++ b/kubernetes/main/bootstrap/talos/talconfig.yaml
@@ -117,11 +117,12 @@ nodes:
 controlPlane:
   schematic:
     customization:
+      extraKernelArgs:
+        - net.ifnames=1
       systemExtensions:
         officialExtensions:
           - siderolabs/intel-ucode
           - siderolabs/i915-ucode
-          - siderolabs/gasket-driver
 
   patches:
     # Disable search domain everywhere
